Fixes base.css so rest class covers block elements
Previously the rest class would make divs extend over most contents, but
not the game boxes as they are artificialy extended.

--- a/site/base.css
+++ b/site/base.css
@@ -31,6 +31,7 @@ body {
 	padding: 10px;
 	padding-left: 30px;
   background-color: #eee;
+  overflow: auto;
 }
 iframe {
   width: 100%;
